Removed preview-features dependencies (moved to preview-features branch) so that the jar can be opened by double-click.
Signed-off-by: Alessandro Villa <alessandro17.villa@mail.polimi.it>